Fixes: display line on mobile, padding on mobile, work exp json changes

--- a/src/index.css
+++ b/src/index.css
@@ -409,7 +409,7 @@ Iphone: 402px x 873px
     }
 
     .certifications {
-        padding: 22px;
+        padding-bottom: 22px;
     }
 
     /* contacts  */
